fixed issue where header buttons were being overlapped on each other

--- a/Theme/assets/css/main.css
+++ b/Theme/assets/css/main.css
@@ -66,8 +66,6 @@ a:after {
  li{
 	 margin:0;
 	 line-height: 1.4em;
-	 padding: 0.2em;
-	 margin: -5px;
  }
 
 .image img {
